<resources>
    <string name="app_name">AventurAPP</string>
    <string name="NombreMoneda">Nombre Moneda</string>
    <string name="InvertirValores">Invertir Valores</string>
    <string name="Titulo">Conversor de Divisas</string>
    <string name="Valor">0.00</string>
    <string name="AgregarIngreso">AGREGAR INGRESO</string>
    <string name="AgregarGasto">AGREGAR GASTO</string>
    <string name="Guardar">Guardar</string>
    <string name="Importe">IMPORTE</string>
    <string name="Nota">NOTA</string>
    <string name="Categoria">CATEGORÍA</string>
    <string name="Gastos">GASTOS</string>
    <string name="AnadeImporte">Añade un Importe</string>
    <string name="AnadeCategoria">Añade una Categoría</string>
    <string name="AnadeNota">Añade una Nota</string>
    <string name="Ingresos">INGRESOS</string>
    <string name="Aventurapp">AventurAPP</string>
    <string name="ingresaTuCorreo">Ingresa tu correo</string>
    <string name="ingresaTuClave">Ingresa tu contraseña</string>
    <string name="iniciarSesion">inicia sesión para continuar</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrate">Regístrate</string>
    <string name="crearCuenta">Registrarme</string>
    <string name="noCuenta">No tienes una cuenta? Regístrate</string>
    <string name="siCuenta">Ya tienes una cuenta? Inicia sesión</string>
    <string name="recuperarContrasena">Olvidé mi contraseña</string>
    <string name="balance">BALANCE</string>
    <string name="nuevaTransaccion">Nueva Transacción</string>
    <string name="descripcion">DESCRIPCIÓN</string>
    <string name="agregar">AGREGAR</string>
    <string name="descripcionAqui">Su descripción aquí</string>
    <string name="dos">200</string>
    <string name="fecha">07 Abril 2024 20:07 </string>
    <string name="ingresos">INGRESOS </string>
    <string name="actualizar">ACTUALIZAR </string>
    <string name="eliminar">ELIMINAR </string>
    <string name="aventuraFinanciera">Aventura Financiera </string>
    <string name="origen">Origen </string>
    <string name="destino">Destino</string>
    <string name="paisOrigen">lugar de origen</string>
    <string name="paisDestino">lugar de destino</string>
    <string name="consultaVuelos">Consulta de Vuelos</string>
    <string name="nomPaisOrigen">País Origen</string>
    <string name="buscarVuelo">BUSCAR VUELO</string>
    <string name="codigo">DESDE ID 1</string>
    <string name="nomPaisDestino">País Destino</string>
    <string name="fechaOrigen">Fecha Origen</string>
    <string name="fechaDestino">Fecha Destino</string>
    <string name="horarioOrigen">Horario Origen</string>
    <string name="horarioDestino">Horario Destino</string>
    <string name="nroViaje">Código de Viaje</string>
    <string name="ejemploCodigo">CÓDIGO ARG00</string>
    <string name="bienvenido">BIENVENIDO/A!</string>
    <string name="info">Espero que puedas llevar un buen control de tu economía</string>
    <string name="info2">Y puedas disfrutar de la app.</string>
    <string name="marca">AventurAPP® - Aventura Financiera</string>
    <string name="marca1">AventurAPP!</string>
    <string name="ingresatuCorreoRecuperacion">Ingresa tu correo</string>
    <string name="recuperaClave">Recupera tu contraseña</string>
    <string name="recuperar">Recuperar</string>
    <string name="SALDO">SALDO</string>
    <string name="VALOR">1000</string>
    <string name="VALOR1">3500</string>
    <string name="transaccionesRecientes">Transacciones Recientes</string>
    <string name="peso">$</string>
    <string name="ANADIR">AÑADIR</string>
    <string name="ARS">ARS</string>
    <string name="ingresatumonto">ingresa tu monto</string>
    <string name="efectivotransferencia">EFECTIVO O TARJETA</string>
    <string name="ingreso">Ingreso</string>
    <string name="gasto">Gasto</string>
    <string name="AGREGAR">AGREGAR</string>
    <string name="TITULO">Título</string>
    <string name="guardarUbicacion">GUARDAR MI UBICACIÓN</string>
    <string name="puntos">..................</string>
    <string name="Latitud">Latitud:</string>
    <string name="Longitud">Longitud:</string>
    <string name="Fecha">19/05/2024</string>
    <string name="Estadisticas">Estadísticas</string>
    <string name="Camara">Abrir Cámara</string>

    <string-array name="categoria">
        <item>-Selecciona Categoría-</item>
        <item>Alojamiento</item>
        <item>Alimentación</item>
        <item>Compras</item>
        <item>Entretenimiento</item>
        <item>Vehículo</item>
        <item>Transporte</item>
        <item>Salud</item>
        <item>Restaurantes</item>
        <item>Familia</item>
        <item>Combustible</item>
        <item>Otro</item>
    </string-array>

    <string-array name="tipoPago">
        <item>-Selecciona Tipo de Pago-</item>
        <item>Efectivo</item>
        <item>Tarjeta Débito</item>
        <item>Tarjeta Crédito</item>
    </string-array>

</resources>