<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/Aventurapp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/iniciarSesion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <EditText
        android:textColor="@color/black"
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/ingresaTuCorreo"
        android:padding="15dp" />

    <EditText
        android:textColor="@color/black"
        android:id="@+id/contrasenaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:inputType="textPassword"
        android:hint="@string/ingresaTuClave"
        android:padding="15dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:text="@string/ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/recuperarClave"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperarContrasena"/>
    <TextView
        android:id="@+id/irPantallaRegistro"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/noCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>