<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/origen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/idVuelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nroViaje"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/paisOrigen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nomPaisOrigen"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fechaOrigen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fechaOrigen"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/horarioOrigen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/horarioOrigen"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/blue" />
            <TextView
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"


                android:text="@string/destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/paisDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nomPaisDestino"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fechaDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fechaDestino"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/horarioDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/horarioDestino"
                android:textSize="24sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/blue" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>