<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".consultas.ConsultasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20sp"
            android:text="@string/consultaVuelos"
            android:textSize="25sp" />
        <ImageView
            android:src="@drawable/vuelo_png"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="5dp">

            <EditText
                android:id="@+id/idVuelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/codigo"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3F51B5"
                android:text="@string/buscarVuelo"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />



            <TextView
                android:id="@+id/paisOrigen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nomPaisOrigen"
                android:textSize="24sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/fechaOrigen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fechaOrigen"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/horarioOrigen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/horarioOrigen"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/blue" />
            <TextView
                android:id="@+id/paisDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nomPaisDestino"
                android:textSize="24sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/fechaDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fechaDestino"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/horarioDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/horarioDestino"
                android:textSize="24sp" />


        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>