<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            android:id="@+id/isImporte"
            android:text="@string/ingreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:textSize="19sp"
                android:id="@+id/importe"
                android:text="@string/VALOR"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/FechaDato"
                android:textColor="@color/teal_700"
                android:layout_marginStart="100dp"
                android:textSize="19sp"
                android:textStyle="bold"
                android:text="@string/Fecha"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <TextView
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/TITULO"
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="16sp"
            android:text="@string/descripcion"
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textColor="@color/purple_700"
            android:layout_gravity="center"
            android:text="Ver Ubicación"
            android:id="@+id/abrirMapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>