<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/main_toolbar" />

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/bienvenido"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/info"
            android:textSize="20sp"/>
        <TextView
            android:padding="0dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/info2"
            android:textSize="20sp" />
        <ImageView
            android:src="@drawable/handshaking"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"/>
        <TextView
            android:padding="0dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/marca"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include layout="@layout/main_nav_drawer" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>