<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gastos.AgregarTransaccionActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_centerVertical="true"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/ANADIR"
                            android:textSize="20sp" />

                    </RelativeLayout>
                    <LinearLayout

                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="150dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_marginStart="10dp"
                            android:textColor="@color/yellowish"
                            android:text="@string/ingresatumonto"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <LinearLayout

                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_marginStart="10dp"
                                android:textStyle="bold"
                                android:textSize="30sp"
                                android:textColor="@color/white"
                                android:text="@string/ARS"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <EditText
                                android:background="@android:color/transparent"
                                android:layout_marginStart="10dp"
                                android:textStyle="bold"
                                android:textSize="30sp"
                                android:inputType="number"
                                android:id="@+id/importe"
                                android:textColor="@color/white"
                                android:hint="@string/Importe"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tipoPago"
                    android:padding="10dp"
                    android:hint="@string/efectivotransferencia"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/stroke"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <EditText
                    android:id="@+id/descripcion"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:hint="@string/descripcion"
                    android:background="@drawable/stroke"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

                <RadioGroup

                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/ingresoRadio"
                        android:text="@string/ingreso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:checked="true"
                        android:id="@+id/gastoRadio"
                        android:text="@string/gasto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RadioGroup>


            </LinearLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/agregar_btn"
            android:layout_margin="10dp"
            android:backgroundTint="@color/purple"
            app:cardCornerRadius="10dp"
            android:background="@color/purple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/agregar_texto"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:padding="20dp"
                android:textColor="@color/white"
                android:text="@string/AGREGAR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include layout="@layout/main_nav_drawer" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>